feat: stabilize real-time messaging, secure websockets, and align schema